--- a/client/pom.xml
+++ b/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.craftercms</groupId>
         <artifactId>crafter-profile-parent</artifactId>
-        <version>3.1.2</version><!-- craftercms version flag -->
+        <version>3.1.3-SNAPSHOT</version><!-- craftercms version flag -->
     </parent>
 
     <groupId>org.craftercms</groupId>
