--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.craftercms</groupId>
     <artifactId>crafter-profile-parent</artifactId>
-    <version>3.1.2</version><!-- craftercms version flag -->
+    <version>3.1.3-SNAPSHOT</version><!-- craftercms version flag -->
     <name>Crafter Profile Parent POM</name>
     <description>Crafter Profile Parent POM</description>
     <packaging>pom</packaging>
